src/objects/Meeting_Room_Booking__c.object
<CustomObject>
    <fields>
        <fullName>Ad_hoc_Revenue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ad-hoc Revenue</label>
        <referenceTo>Ad_hoc_Revenue__c</referenceTo>
        <relationshipName>Meeting_Room_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_End_Date__c</fullName>
        <label>Booking End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Booking_Start_Date__c</fullName>
        <label>Booking Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Checkfront_Customer_ID__c</fullName>
        <label>Checkfront Customer ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>A unique booking code used to refer to the booking</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>The date on which the booking was created</description>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Meeting_Room_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <description>The customer’s email address</description>
        <label>Customer Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>The customer’s full name</description>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Paid_Total__c</fullName>
        <description>The total amount the customer has paid on the order</description>
        <label>Order Paid Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Sub_Total__c</fullName>
        <description>The sub-total of all charges added to the order</description>
        <label>Order Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Tax_Total__c</fullName>
        <description>The sum of all taxes applied to the order</description>
        <label>Order Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <description>The total of all charges and taxes added to the order</description>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <label>Room</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The current status code of the booking</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Meeting Room Booking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Status__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Order_Total__c</columns>
        <columns>Order_Paid_Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MRB-{000000000}</displayFormat>
        <label>Meeting Room Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Room Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>